block-explorer: Implement BTC endpoints (WIP)
