# block-explorer/dtos/BlockDto.go
@@ -1,0 +1,6 @@
+package dtos
+
+// BlockDto is a DTO for api requests
+type BlockDto struct {
+	ID string `json:"id"`
+}
